--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
 	<title>About</title>
 
 	<!-- Webフォント -->
-	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="/lib/normalize/normalize.css">	
 	<link rel="stylesheet" href="/lib/slidebars/slidebars.min.css">
 	<link rel="stylesheet" href="/css/style.css">
