--- a/about/index.html
+++ b/about/index.html
@@ -35,10 +35,13 @@
 			当サイトにコンテンツを掲載するにあたり内容について細心の注意を払っておりますが、コンテンツの内容が正確であるかどうか最新のものであるかどうか安全なものであるか等について保証をするものではなく、何らの責任を負うものではありません。
             </p>
             <p>
-			また、掲載内容は通知することなく情報の訂正、修正、追加、中断、削除等をいつでも行うことができるものとします。
+			掲載内容は私個人の意見であり、所属企業・部門見解を代表するものではありません。
             </p>
             <p>
-			当サイト、またはコンテンツのご利用により、万一ご利用者様に何らかの不都合や損害が発生したとしても、当サイトは何らの責任を負うものではありません。
+            また、通知することなく情報の訂正、修正、追加、中断、削除等をいつでも行うことができるものとします。
+            </p>
+            <p>
+			当サイトまたはコンテンツのご利用により、万一ご利用者様に何らかの不都合や損害が発生したとしても当サイトは何らの責任を負うものではありません。
 			</p>
             
             <br>
