--- a/common/slidebar.html
+++ b/common/slidebar.html
@@ -4,7 +4,7 @@
 		<input type="text" name="q" size="0" maxlength="255" value="" placeholder="サイト内検索">
 		<input class="searchbutton" type="submit" name="btn" value="検索">
 		<input type="hidden" name="hl" value="ja">
-		<input type="hidden" name="sitesearch" value="blog-hazimetemitannda.ga">
+		<input type="hidden" name="sitesearch" value="0248ym.github.io">
 	</form>
 
 	<ul class="menu-list">
