[mod] メニューの構成変更。

--- a/common/slidebar.html
+++ b/common/slidebar.html
@@ -9,14 +9,24 @@
 
 	<ul class="menu-list">
 		<li><a href="/">最新記事</a></li>
-		<li>技術
+		<li>ハード
 			<ul>
-			<li><a href="#">Raspberry Pi(準備中)</a></li>
-			<li><a href="#">Web(準備中)</a></li>
+			<li><a href="#">Raspberry Pi<br>(準備中)</a></li>
+			</ul>
+		</li>
+        <li>ソフト
+			<ul>
+			<li><a href="#">GoogleAnalytics<br>(準備中)</a></li>
+			</ul>
+		</li>
+        <li>工作
+			<ul>
+			<li><a href="#">レーザー彫刻機<br>(準備中)</a></li>
 			</ul>
 		</li>
         <li>カメラ
             <ul>
+            <li><a href="#">機材(準備中)</a></li>
             <li><a href="/photo/index.html">写真</a></li>
             </ul>
 		</li>
