--- a/photo/index.html
+++ b/photo/index.html
@@ -30,7 +30,7 @@
 	<!-- 内容 Start -->
 	<div canvas="container">
 		<div  class="contents">
-			<div class="contents-title">お写真</div>
+			<div class="contents-title">写真</div>
             <div class="last-update-date">最終更新 : 2019/10/22</div>
 			
 			<div id="grid">
