--- a/index.html
+++ b/index.html
@@ -28,47 +28,13 @@
 	<!-- 内容 Start -->
 	<div canvas="container">
 
-	
-		
 		<div  class="contents">
 			<div class="contents-title">最新記事</div>
             <div class="last-update-date">最終更新 : 2019/10/22</div>
-<p>記事がありません。</p>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-ダミー		
+            
+            <p><b>2019/10/22</b> カメラ > <a href="./photo/index.html">写真</a> を更新しました。</p>
+
 		</div>
-		
 
 	</div>
 	<!-- 内容 End -->
