[add] このサイトについてのページを追加。

--- a/common/slidebar.html
+++ b/common/slidebar.html
@@ -11,20 +11,16 @@
 		<li><a href="/">最新記事</a></li>
 		<li>技術
 			<ul>
-			<li><a href="#">Raspberry Pi</a></li>
-			<li><a href="#">Web</a></li>
+			<li><a href="#">Raspberry Pi(準備中)</a></li>
+			<li><a href="#">Web(準備中)</a></li>
 			</ul>
 		</li>
 		<li><a href="/photo/index.html">写真</a></li>
-		<li><a href="#">その他</a></li>
+		<li><a href="/about/index.html">その他</a></li>
 	</ul>
 	
 
 	<div id="social-icon" class="clear">
-        <!--
-		<a href="#"><i class="fa fa-google-plus fa-lg"></i>Google+</a>
-		<a href="#"><i class="fa fa-facebook fa-lg"></i>Facebook</a>
-        -->
 		<a href="#"><i class="fa fa-twitter fa-lg"></i>Twitter</a>
 	</div>
 
