[add] 自己紹介ページを追加。

--- a/common/slidebar.html
+++ b/common/slidebar.html
@@ -16,6 +16,7 @@
 			</ul>
 		</li>
 		<li><a href="/photo/index.html">写真</a></li>
+        <li><a href="/profile/index.html">管理人</a></li>
 		<li><a href="/about/index.html">その他</a></li>
 	</ul>
 	
