[add] メニュー追加。

--- a/common/slidebar.html
+++ b/common/slidebar.html
@@ -16,6 +16,11 @@
 		</li>
         <li>ソフト
 			<ul>
+			<li><a href="#">(準備中)</a></li>
+			</ul>
+		</li>
+        <li>ツール
+			<ul>
 			<li><a href="#">GoogleAnalytics<br>(準備中)</a></li>
 			</ul>
 		</li>
