[add] Twitterへのリンク関連の修正。

--- a/about/index.html
+++ b/about/index.html
@@ -55,10 +55,18 @@
             <p>
             また、まとめサイトへの引用を厳禁いたします。
             </p>
-		
+                                    
+            <br>
+            <br>
+            
+            <div class="contents-title">お問い合わせ</div>
+
+            <p>
+            Twitter DMよりお願いいたします。
+            </p>
 	   </div>
-	   <!-- 内容 End -->
     </div>
+    <!-- 内容 End -->
 	
 	
     <script type="text/javascript" src="/js/cachecheck.js"></script>
