--- a/common/slidebar.html
+++ b/common/slidebar.html
@@ -21,7 +21,7 @@
 	
 
 	<div id="social-icon" class="clear">
-		<a href="#"><i class="fa fa-twitter fa-lg"></i>Twitter</a>
+		<a href="https://twitter.com/_SPiCa__ARiA_"><i class="fa fa-twitter fa-lg"></i>Twitter</a>
 	</div>
 
 </div>
