[mod] メニュー表記変更。

--- a/common/slidebar.html
+++ b/common/slidebar.html
@@ -21,7 +21,7 @@
             </ul>
 		</li>
         <li><a href="/profile/index.html">管理人</a></li>
-		<li><a href="/about/index.html">その他</a></li>
+		<li><a href="/about/index.html">このサイトについて</a></li>
 	</ul>
 	
 
