[add] プロフィールページへ写真追加。

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<div class="contents-title">最新記事</div>
             <div class="last-update-date">最終更新 : 2019/10/22</div>
             
+            <p><b>2019/11/20</b> <a href="./profile/index.html">管理人</a> を更新しました。</p>
             <p><b>2019/10/22</b> カメラ > <a href="./photo/index.html">写真</a> を更新しました。</p>
 
 		</div>
