--- a/profile/index.html
+++ b/profile/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="/lib/normalize/normalize.css">
 	<link rel="stylesheet" href="/lib/slidebars/slidebars.min.css">
 	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/profile.css">
 </head>
 
 <body>
@@ -32,8 +33,13 @@
 		
 		<div  class="contents">
 			<div class="contents-title">自己紹介</div>
-            <div class="last-update-date">最終更新 : 2019/10/22</div>
+            <div class="last-update-date">最終更新 : 2019/11/20</div>
 
+            <div class="profile-photo">
+                <img src="./img/Me.jpg" alt="Me">
+            </div>
+            <p>HN: Me</p>
+            <br>
             <p>しがない会社員。</p>
             <p>趣味は色々、最近は旅と写真が主。</p>
 		</div>
