[add] 最終更新日付の追加。

--- a/about/index.html
+++ b/about/index.html
@@ -67,6 +67,8 @@
             <p>
             Twitter DMよりお願いいたします。
             </p>
+            
+            <div class="last-update-date">最終更新 : 2019/10/22</div>
 	   </div>
     </div>
     <!-- 内容 End -->
