--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		
 		<div  class="contents">
 			<div class="contents-title">最新記事</div>
-
+            <div class="last-update-date">最終更新 : 2019/10/22</div>
 <p>記事がありません。</p>
 <br>
 <br>
