--- a/profile/index.html
+++ b/profile/index.html
@@ -32,6 +32,7 @@
 		
 		<div  class="contents">
 			<div class="contents-title">自己紹介</div>
+            <div class="last-update-date">最終更新 : 2019/10/22</div>
 
             <p>しがない会社員。</p>
             <p>趣味は色々、最近は旅と写真が主。</p>
