--- a/common/slidebar.html
+++ b/common/slidebar.html
@@ -38,7 +38,7 @@
 ( function ( $ ) {
 	
 	// Initialize Slidebars
-	var controller = new slidebars();
+	let controller = new slidebars();
 	controller.init();
 	
 	/**
