--- a/photo/index.html
+++ b/photo/index.html
@@ -155,7 +155,7 @@
 	
 	
 	<script>
-		var elements = document.querySelectorAll( '.intense' );
+		let elements = document.querySelectorAll( '.intense' );
 		Intense( elements );
 	</script>
     
