--- a/common/slidebar.html
+++ b/common/slidebar.html
@@ -15,7 +15,11 @@
 			<li><a href="#">Web(準備中)</a></li>
 			</ul>
 		</li>
-		<li><a href="/photo/index.html">写真</a></li>
+        <li>カメラ
+            <ul>
+            <li><a href="/photo/index.html">写真</a></li>
+            </ul>
+		</li>
         <li><a href="/profile/index.html">管理人</a></li>
 		<li><a href="/about/index.html">その他</a></li>
 	</ul>
